style.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');

/* Resetting  */
*,
*::before,
*::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Basic Styles */
html {
    font-size: 62.5%;
}

body {
    font-family: "IBM Plex Sans", sans-serif;
    font-size: 1.6rem;
    overflow-x: hidden;
}

/* Utilities */
.border-radius {
    border-radius: 2rem;
}

.btn {
    width: 100%;
    text-align: center;
    display: block;
    color: hsl(20, 33%, 98%);
    text-decoration: none;
    font-weight: 700;
    padding-top: 1.5rem;
    padding-bottom: 1.4rem;
    border-radius: 1rem;
}

.btn-primary {
    background-color: hsl(244, 23%, 12%);
}

.btn-secondary {
    background-color: hsl(20, 33%, 98%);
    color: hsl(244, 23%, 12%);
}

/* Header Styles */
header {
    padding: 4rem 2.4rem;
    background-image: url("./assets/bg-main-mobile.png");
    background-repeat: no-repeat;
    background-position: bottom -8rem right -21rem;
}

header .bg-pattern {
    display: none;
}

header img {
    margin-bottom: 6.4rem;
}

header h1 {
    font-size: 5rem;
    letter-spacing: -1px;
    line-height: 1;
    max-width: 52rem;
    margin-bottom: 2rem;
}

header p {
    line-height: 1.4;
    max-width: 52rem;
}

/* Showcase Section */
.showcase {
    margin-top: 15rem;
}

.showcase-image {
    height: 60rem;
    background-color: hsl(244, 23%, 12%);
    text-align: center;
    background-image: url("./assets/bg-pattern-2.svg");
    background-position: top center;
    background-repeat: no-repeat;
    background-size: 27rem;
}

.showcase-image img {
    width: 20.8rem;
    height: 43rem;
    transform: translateY(-25%);
}

.showcase-card {
    background-color: hsl(12, 94%, 65%);
    color: hsl(20, 33%, 98%);
    padding: 4.8rem 3.7rem 4.8rem 3.6rem;
    transform: translateY(-38%);
}

.showcase-card h2 {
    font-size: 4rem;
    margin-bottom: 1.2rem;
    line-height: 1.3;
}

.showcase-card p:first-of-type {
    font-size: 2rem;
    margin-bottom: 3.6rem;
    line-height: 1.7;
}

.showcase-card p:nth-child(3) {
    display: flex;
    gap: 1.6rem;
    align-items: center;
    font-size: 2rem;
    margin-bottom: 3.2rem;
}

.showcase-card .price {
    font-size: 5.2rem;
    font-weight: 700;
}

.platform-container a {
    transition: background-color 300ms;
}

.apple {
    margin-bottom: 1.6rem;
}

.apple a:hover {
    background-color: hsl(177, 68%, 64%);
}

.android a:hover {
    background-color: hsl(33, 100%, 70%);
}

.apple span,
.android span {
    position: relative;
    bottom: 0.3rem;
    margin-left: 0.78rem;
}

footer {
    padding: 0 2.4rem;
    transform: translateY(-55%);
}

footer p {
    line-height: 1.7;
}

footer .email {
    font-weight: 700;
}

footer .social-media-handles {
    margin-top: 6.4rem;
    display: flex;
    gap: 2rem;
}

footer .social-media-handles a {
    transition: filter 300ms;
}

footer .social-media-handles .icon:hover {
    cursor: pointer;
    filter: invert(57%) sepia(41%) saturate(2574%) hue-rotate(328deg) brightness(104%) contrast(96%);
}

@media only screen and (min-width: 768px) {
    html {
        font-size: 65%;
    }

    body {
        position: relative;
        background-image: url("./assets/bg-main-tablet.png");
        background-repeat: no-repeat, no-repeat;
        background-origin: border-box, border-box;
        background-size: 120rem 120rem;
        background-position: left -36.5rem top -25rem;
    }

    main {
        position: relative;
        overflow-x: hidden;
    }

    header {
        padding-top: 6.199rem; 
        padding-left: 3.91rem;
        background-image: none;
        max-width: 52rem;
    }

    header .bg-pattern {
        display: block;
        position: absolute;
        top: -4rem;
        right: -3.2rem;
    }

    header h1 {
        margin-top: 9.51rem;
        margin-bottom: 2.8rem;
    }

    .showcase {
        max-width: 69.6rem;
        margin: 0 auto;
        margin-top: 18rem;
        position: relative;
    }

    .showcase-image {
        text-align: left;
    }

    .showcase h2 {
        font-size: 3rem;
    }

    .showcase-image img {
        width: 27.21rem;
        height: 55.6rem;
        position: relative;
        left: 4.4rem;
    }

    .showcase-card {
        width: 40rem;
        margin-left: 23.9rem;
        transform: translate(0);
        position: absolute;
        left: -1.9rem;
        top: 16.5rem;
    }

    .showcase-card p:first-of-type {
        font-size: 1.5rem;
        margin-bottom: 3.6rem;
    }

    footer {
        position: relative;
        top: 22rem;
        margin-bottom: 20rem;
        margin-left: 3.3rem;
        margin-right: 3.9rem;
    }

    .footer-container {
        display: flex;
        align-items: center;
        margin-top: 3.2rem;
        justify-content: space-between;
    }

    .social-media-handles {
        position: relative;
        bottom: 2.9rem;
    }
}

@media only screen and (min-width: 1200px) {
    body {
        background-image: url("./assets/bg-main-desktop.png");
        background-size: cover;
        font-size: 1.8rem;
    }

    header {
        padding-left: 0;
        max-width: 110rem;
        margin: 0 auto;
    }

    header h1 {
        font-size: 6.8rem;
        max-width: 70rem;
        margin-top: 3rem;
    }

    header .bg-pattern {
        right: 0;
    }

    main {
        position: static;
        padding-left: 16.5rem;
        padding-right: 16.5rem;
    }

    .showcase {
        max-width: 100rem;
        width: 100rem;
        margin-top: 30rem;
    }

    .showcase-card {
        transform: translateX(85%);
    }

    .showcase-image img {
        width: 31.2rem;
        height: 64.2rem;
        transform: translate(30%, -37%);
    }

    footer {
        max-width: 110rem;
        margin: 0 auto;
        display: flex;
        justify-content: space-between;
        align-items:flex-start;
        padding: 0;
        margin-bottom: 25rem;
    }

    footer .footer-container {
        margin-top: 0;
        margin-left: 15rem;
        flex-grow: 1;
        justify-content: space-between;
    }
}

@media only screen and (min-width: 1440px) {
    header h1 {
        max-width: 100%;
        font-size: 8.8rem;
    }
}

